--- a/source/stylesheets/config/_variables.scss
+++ b/source/stylesheets/config/_variables.scss
@@ -1,7 +1,7 @@
 $background-color: #F8F9FA;
 $main-color: #46DDD4;
 $main-text-color: #5A5B5A;
-$box-shadow-color: #91918F;
+$box-shadow-color: #d1d1cf;
 $padding: 15px;
 $margin: 20px;
 $profile-info-width: 30vw;
